@@ -60,6 +60,9 @@ files: create-dirs
 	if [ ! -f ${EXTDIR}/sysconfig/modules     ]; then \
           install -m ${CONFMODE} lfs/sysconfig/modules     ${EXTDIR}/sysconfig/ ;\
         fi
+	if [ ! -f ${EXTDIR}/sysconfig/udev_retry  ]; then \
+          install -m ${CONFMODE} lfs/sysconfig/udev_retry  ${EXTDIR}/sysconfig/ ;\
+        fi
 	if [ ! -f ${EXTDIR}/sysconfig/rc          ]; then \
           install -m ${CONFMODE} lfs/sysconfig/rc          ${EXTDIR}/sysconfig/ ;\
         fi
