@@ -1,4 +1,11 @@
-2100-09-18
+2011-10-06  Bryan Kadzban <bryan@linuxfromscratch.org>
+
+   * Add configuration for udev_retry, and remove --type=failed (which does
+     not work with recent udev versions anyway, since no events can possibly
+     trigger it).  Start with just the "rtc" subsystem.  BLFS should eventually
+     add "sound" to this file, and perhaps others.
+
+2011-09-18
    * Review and update of changes made in previous change.
    ** Rename /etc/sysconfig/init_params to /etc/sysconfig/rc.site.
    ** Move network services to /lib/services.
